--- a/index.css
+++ b/index.css
@@ -83,6 +83,10 @@ ul {
 	animation: hero-section 1s ease-in-out infinite alternate;
 }
 
+.display-1 {
+	font-size: 10vw !important;
+}
+
 .glow {
 	text-shadow: 0px 0px 15px rgba(255, 255, 255, .5) !important;
 }
